--- a/app/templates/orientador/confirm_delete_orientador.html
+++ b/app/templates/orientador/confirm_delete_orientador.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "orientador/list_orientador.html" %}
 {%load static%}
 
 {% load django_bootstrap_breadcrumbs %}
