--- a/app/templates/acesso/relatorio.html
+++ b/app/templates/acesso/relatorio.html
@@ -29,9 +29,9 @@
     {%endfor%}
     <label class="sr-only" for="inlineFormInput">De</label>
     <input type="date" class="form-control mb-2 mr-sm-2 mb-sm-0" id="data_" name="data_" value="{{data}}">
-    <label class="sr-only" for="inlineFormInput">Até</label>
+    <label class="mr-sm-2" for="inlineFormInput">Até</label>
     <input type="date" class="form-control mb-2 mr-sm-2 mb-sm-0" id="data_f" name="data_f" value="{{data}}">
-    <button type="submit" class="btn btn-primary">Gerar Relatório</button>
+    <button type="submit" class="btn btn-success">Gerar PDF</button>
     </div>
     </div>
 </form>
