--- a/app/templates/home_admin.html
+++ b/app/templates/home_admin.html
@@ -17,12 +17,8 @@
 
     <link href="{% static 'css/bootstrap/bootstrap.min.css'%}" rel="stylesheet">
     <link href="{% static 'css/custom2.css' %}" rel="stylesheet">
-    <!-- Custom styles for this template -->
-
   </head>
-
   <body>
-
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="{%url 'app:home'%}">LEDS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +31,7 @@
             {% if user.is_authenticated %}
 
             <ul class="navbar-nav">
-                <li><a class="nav-link" href="{% url 'app:registrar' %}">Cadastrar Usuario Comum</a></li>
+                <li><a class="nav-link" href="{% url 'app:registrar' %}">Cadastrar Usuário</a></li>
                 
                 <li><a class="nav-link" href="{% url 'app:sair' %}">Sair</a></li>
             {% else %}
@@ -44,58 +40,38 @@
           </form>
         </div>
       </nav>
-
-    <!-- Begin page content -->
     <div class="container-fluid">
       <div class="row" align="center">
-          <div class="col-x1-2 col-lg-2 col-md-4 offset-lg-3 offset-md-1.5 col-sm-12">
-            <img class="card-img-top" src="{%static 'img/img_profe.png'%}" alt="Card image cap">
+          <div class="col-x1-4 col-lg-4 col-md-4 col-sm-12">
+
             
             <div class="list-group">
-              <h4>Orientador</h4>
+              <h4>            <img src="{%static 'img/img_profe.png'%}" height="50px" width="50px">Orientador</h4>
               <a href="{%url 'app:create_orientador'%}" class="list-group-item list-group-item-action">Cadastrar</a>
               <a href="{%url 'app:list_orientador'%}" class="list-group-item list-group-item-action">Listar</a>
           </div>
           </div>
-          <div class="col-x1-2 col-lg-2 col-md-4 col-sm-12">
-            <img class="card-img-top" src="{%static 'img/img_bolsi.png'%}" alt="Card image cap">
+          <div class="col-x1-4 col-lg-4 col-md-4 col-sm-12">
             
             <div class="list-group">
-              <h4>Bolsista</h4>
+              <h4><img src="{%static 'img/img_bolsi.png'%}" height="50px" width="50px">
+            Bolsista</h4>
               <a href="{%url 'app:create_bolsista'%}" class="list-group-item list-group-item-action">Cadastrar</a>
               <a href="{%url 'app:list_bolsista'%}" class="list-group-item list-group-item-action">Listar</a>
           </div>
           </div>
-          <div class="col-x1-2 col-lg-2 col-md-4 col-sm-12">
-            <img class="card-img-top" src="{%static 'img/file_relatorio.png'%}" alt="Card image cap">
-
-
+          <div class="col-x1-4 col-lg-4 col-md-4 col-sm-12">
             <div class="list-group">
-              <h4>Relatorio</h4>
+              <h4><img src="{%static 'img/file_relatorio.png'%}" height="50px" width="50px">
+            Relatório</h4>
               <a href="{%url 'app:ac'%}" class="list-group-item list-group-item-action">Por Bolsista</a>
               <a href="{%url 'app:ap'%}" class="list-group-item list-group-item-action">Por Periodo</a>
-              <!--<a href="{%url 'app:list_acesso' %}" class="list-group-item list-group-item-action">Tudo</a>
-              <a href="{%url 'app:act' %}" class="list-group-item list-group-item-action">Teste</a>-->
             </div>
           </div>      
       </div>
     </div>
-
-
-   
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>-->
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-
-
   </body>
 </html>
