--- a/app/templates/home_user_comum.html
+++ b/app/templates/home_user_comum.html
@@ -8,21 +8,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="{%static 'img/ICOLEADS.png'%}">
-
     <title>PROJETO LEDS</title>
-
-    <!-- Bootstrap core CSS -->
-
-       
-
     <link href="{% static 'css/bootstrap/bootstrap.min.css'%}" rel="stylesheet">
     <link href="{% static 'css/custom.css' %}" rel="stylesheet"> 
-    <!-- Custom styles for this template -->
-
   </head>
-
-  <body>
-
+  <body id="body">
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="{%url 'app:home'%}">LEDS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,39 +32,42 @@
           </form>
         </div>
       </nav>
-
-    <!-- Begin page content -->
     <div class="container-fluid">
       <h2 id="id">Apresente o cartão para registrar o acesso</h2>
     </div>
-
-   
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {%block javascript%}
-
     <script>
-      $(document).ready(function(){
-        $.get('/teste_aja2/', function(data){
-          if (data.key_value == 'undefine' || data.key_value == 'UNDEFINE'){
-            alert('Erro na leitura do cartão, tente novamente');
+    $(document).ready(function(){
+    $(document).ajaxStart(function(){
+        $("#id").css("display", "block");
+    });
+    $(document).ajaxComplete(function(){
+        $("#id").css("display", "none");
+    });
+    $.ajax({
+      url: '/teste_aja2/',
+      dataType: 'json',
+      success: function (data) {
+        if(data.key_value == 'undefined' || data.key_value == 'UNDEFINED'|| data.key_value == ''){
+          alert('Erro ao ler cartão, tente novamente.');
+          location.reload();
+        }else{
+          alert(data.message);
             location.reload();
-          }
-          else{
-            alert(data.message);
-            location.reload();
-          }
-          
+            
+       }
+      },
+      error: function(data) {
+        alert("Erro na leitura, verifique se o arduino está conectado corretamente!");
+	location.reload();
+        
+      }
       });
- });
+    });
     </script>
-
     {%endblock%}
-
   </body>
 </html>
