--- a/app/templates/bolsista/cad_bolsista.html
+++ b/app/templates/bolsista/cad_bolsista.html
@@ -103,6 +103,7 @@
 {% endfor %}
 {% buttons %}
       <button type="submit" class="btn btn-primary">Salvar</button>
+<button type="submit" class="btn btn-outline-dark">Limpar</button>
 {% endbuttons %}
 </form>
 
