--- a/app/templates/home_admin.html
+++ b/app/templates/home_admin.html
@@ -41,6 +41,14 @@
         </div>
       </nav>
     <div class="container-fluid">
+	<div class="row" align="center" style="padding-bottom:5%;">
+          <div class="col-x1-12 col-lg-12 col-md-12 col-sm-12">
+		
+		
+		<img src="{%static 'img/img_ledss.png'%}" class="img-fluid" height="200px">
+		<h2 style="color:gray;">Laboratório de Sistemas Embarcados e Distribuídos</h2>
+	  </div>
+	</div>
       <div class="row" align="center">
           <div class="col-x1-4 col-lg-4 col-md-4 col-sm-12">
 
@@ -62,7 +70,7 @@
           </div>
           <div class="col-x1-4 col-lg-4 col-md-4 col-sm-12">
             <div class="list-group">
-              <h4><img src="{%static 'img/file_relatorio.png'%}" height="50px" width="50px">
+              <h4><img src="{%static 'img/relat.png'%}" height="50px" width="50px">
             Relatório</h4>
               <a href="{%url 'app:ac'%}" class="list-group-item list-group-item-action">Por Bolsista</a>
               <a href="{%url 'app:ap'%}" class="list-group-item list-group-item-action">Por Periodo</a>
