--- a/app/templates/orientador/cad_orientador.html
+++ b/app/templates/orientador/cad_orientador.html
@@ -83,6 +83,7 @@
 {% endfor %}
 {% buttons %}
         <button type="submit" class="btn btn-primary">Salvar</button>
+	<button type="reset" class="btn btn-outline-dark">Limpar</button>
 {% endbuttons %}
 </form>
 {% endblock %}
