--- a/app/templates/home_user_comum.html
+++ b/app/templates/home_user_comum.html
@@ -33,6 +33,14 @@
         </div>
       </nav>
     <div class="container-fluid">
+<div class="row" align="center" style="padding-bottom:5%;">
+          <div class="col-x1-12 col-lg-12 col-md-12 col-sm-12">
+		
+		
+		<img src="{%static 'img/img_ledss.png'%}" class="img-fluid" height="200px">
+		<h2 style="color:gray;">Laboratório de Sistemas Embarcados e Distribuídos</h2>
+	  </div>
+	</div>
       <h2 id="id">Apresente o cartão para registrar o acesso</h2>
     </div>
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
