--- a/app/templates/bolsista/cad_bolsista.html
+++ b/app/templates/bolsista/cad_bolsista.html
@@ -95,7 +95,7 @@
       {% render_field field class="form-control col-md-6" %}
     {%else%}
     {% if field.name == 'cartao_rfid'  %}
-    	{% render_field field class="form-control col-md-3" hidden="True" placeholder="CLICK E APRESENTE O CARTÃO" %}
+    	{% render_field field class="form-control col-md-3" hidden="True" placeholder="APRESENTE O CARTÃO" %}
     	{%else%}
     	{% render_field field class="form-control col-md-3" %}
     	{%endif%}
