--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,7 @@
 
    <link href="{% static 'css/bootstrap/bootstrap.min.css'%}" rel="stylesheet">
    <link href="{% static 'css/custom2.css' %}" rel="stylesheet">
+   <link rel="stylesheet" href="{%static 'css/jquery.toastmessage.css'%}">
     <!-- Custom styles for this template -->
 
   </head>
@@ -71,7 +72,7 @@
             {% if user.is_authenticated %}
 
             <ul class="navbar-nav">
-                <li><a class="nav-link" href="{% url 'app:registrar' %}">Cadastrar Usuario Comum</a></li>
+                <li><a class="nav-link" href="{% url 'app:registrar' %}">Cadastrar Usuario</a></li>
                 <li><a class="nav-link" href="{% url 'app:sair' %}">Sair</a></li>
             {% else %}
                 <li class="nav-item"><a class="nav-link" href="#"></a></li>
@@ -100,16 +101,10 @@
     </main>
 
       
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script> -->
-
   <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
   <script src="{% static 'js/popper.min.js' %}"></script>
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script src="{%static '/js/jquery.toastmessage.js'%}"></script>
 
     {%block javascript%}
     <script>
