--- a/app/templates/registrar.html
+++ b/app/templates/registrar.html
@@ -44,11 +44,12 @@
 </div>
 {% endfor %}
 {% buttons %}
-        <button type="submit" class="btn btn-primary">Salvar</button>
+        <button type="submit" id="btn-salvar" class="btn btn-primary">Salvar</button>
 {% endbuttons %}
 </form>{% endblock %}
 
 <script>
+$("#btn_salvar").on('click',function () {
 {% for message in messages %}
 	{%if message.tags == 'success' %}
 	$().toastmessage('showSuccessToast', "{{message}}");
@@ -56,5 +57,6 @@
 	{%if message.tags == 'error' %}
 	$().toastmessage('showErrorToast', "{{message}}");
 	{%endif%}
+ });
 
 {%endfor%}
