--- a/app/static/css/custom2.css
+++ b/app/static/css/custom2.css
@@ -5,29 +5,46 @@
 
 input#id_nome{
 
+}html {
+  position: relative;
+  min-height: 100%;
 }
-html,
 body {
-  height: 100%;
-}
-
-body {
-
-  padding-top: 75px;
-  padding-bottom: 15%;
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
   background-color: #dddddd;
 }
-
-
-
-footer {
-    position: fixed;
-    height: 100px;
-    bottom: 0;
-    width: 100%;
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 50px;
+  line-height: 50px; /* Vertically center the text there */
+  background-color: #f5f5f5;
 }
 
 
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+body > .container {
+  padding: 60px 15px 0;
+}
+
+body > .container-fluid {
+  padding: 60px 15px 0;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+code {
+  font-size: 80%;
+}
 .list-group{
   padding-top: 5px;
   padding-bottom: 5px;
