--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -3,9 +3,45 @@
   --input-padding-y: .75rem;
 }
 
-html,
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
-  height: 100%;
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+  background-color: #dddddd;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 4%;
+  line-height: 30px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+body > .container {
+  padding: 60px 15px 0;
+}
+
+body > .container-fluid {
+  padding: 60px 15px 0;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+code {
+  font-size: 80%;
 }
 
 .list-group{
