--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -108,7 +108,11 @@
     {% endblock %}
     </main>
 
-      
+  <footer class="footer">
+      <div class="container">
+        <span class="text-muted">Desenvolvido por 2MAS.</span>
+      </div>
+    </footer>    
   <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
   <script src="{% static 'js/popper.min.js' %}"></script>
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
