--- a/app/templates/home_admin.html
+++ b/app/templates/home_admin.html
@@ -82,6 +82,11 @@
           </div>      
       </div>
     </div>
+<footer class="footer">
+      <div class="container">
+        <span class="text-muted">Desenvolvido por 2MAS.</span>
+      </div>
+    </footer>
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
