--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -71,6 +71,11 @@
         <button type="submit" class="col-md-12 btn btn-primary">Entrar</button>
 {% endbuttons %}
 </form>
+<footer class="footer">
+      <div class="container">
+        <span class="text-muted">Desenvolvido por 2MAS.</span>
+      </div>
+    </footer>
 
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
