--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -2,29 +2,46 @@
   --input-padding-x: .75rem;
   --input-padding-y: .75rem;
 }
-
-html,
+html {
+  position: relative;
+  min-height: 100%;
+}
 body {
-  height: 100%;
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+  background-color: #dddddd;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 50px;
+  line-height: 50px; /* Vertically center the text there */
+  background-color: #f5f5f5;
 }
 
-body {
 
-  padding-top: 75px;
-  padding-bottom: 15%;
-  background-color: #708090;
-  color: white;
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+body > .container {
+  padding: 60px 15px 0;
 }
 
-
-
-footer {
-    position: fixed;
-    height: 100px;
-    bottom: 0;
-    width: 100%;
+body > .container-fluid {
+  padding: 60px 15px 0;
 }
 
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+code {
+  font-size: 80%;
+}
 .breadcrumb {
   background-color: #DCDCDC;
   color: gray;
