--- a/app/templates/home_user_comum.html
+++ b/app/templates/home_user_comum.html
@@ -47,6 +47,11 @@
     <div class="container-fluid">
       <h2 id="id">Apresente o cartão para registrar o acesso</h2>
     </div>
+<footer class="footer">
+      <div class="container">
+        <span class="text-muted">Desenvolvido por 2MAS.</span>
+      </div>
+    </footer>
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
